--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,6 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-dark bg-dark navbar-fixed-top">
   <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-        aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+    <div class="navbar-header">      
       <a class="navbar-brand" href="https://github.com/mikeysteele/ngx-britecharts"
         target="_blank">ngx-britecharts</a>
     </div>
@@ -20,7 +13,15 @@
 </nav>
 
 <div class="container">
-  <h5>Angular 7 Demo</h5>
+
+  <h5 class="mt-2">Angular 7 Demo</h5>
 
   <app-charts></app-charts>
+  <div class="row">
+    <div class="col-12 text-center">
+      <hr>
+      <h4><a target="_blank" href="https://www.colap.io"><img class="colap-logo" src="assets/logo_light.png"
+            alt="Colap logo"></a></h4>
+    </div>
+  </div>
 </div>
